kubernetes/apps/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
  namespace: media
spec:
  selector:
    app: qbittorrent
  ports:
  - name: webui
    port: 8080
    targetPort: 8080
  - name: torrent-tcp
    port: 6881
    targetPort: 6881
    protocol: TCP
  - name: torrent-udp
    port: 6881
    targetPort: 6881
    protocol: UDP
  type: ClusterIP
